# advent-of-code-2021

./: Cargo.toml
outputs/: chiton
src/: basin.rs  basin2.rs  binary-diagnostic.rs  binary-diagnostic2.rs  bingo.rs  bingo2.rs  chiton.rs  chiton2.rs  crabs.rs  crabs2.rs  decoder.rs  decoder2.rs  dirac.rs  dirac2.rs  dive.rs  dive2.rs  dumbo.rs  dumbo2.rs  lanternfish.rs  lanternfish2.rs  origami.rs  origami2.rs  passage.rs  passage2.rs  polymer.rs  polymer2.rs  reactor.rs  reactor2.rs  scanner.rs  scanner2.rs  seven-segment.rs  seven-segment2.rs  snailfish.rs  snailfish2.rs  sonar.rs  sonar2.rs  syntax.rs  syntax2.rs  trench.rs  trench2.rs  (+4 more)
