[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sonar"
path = "src/sonar.rs"

[[bin]]
name = "sonar2"
path = "src/sonar2.rs"

[[bin]]
name = "dive"
path = "src/dive.rs"

[[bin]]
name = "dive2"
path = "src/dive2.rs"

[[bin]]
name = "binary-diagnostic"
path = "src/binary-diagnostic.rs"

[[bin]]
name = "binary-diagnostic2"
path = "src/binary-diagnostic2.rs"

[[bin]]
name = "bingo"
path = "src/bingo.rs"

[[bin]]
name = "bingo2"
path = "src/bingo2.rs"

[[bin]]
name = "vents"
path = "src/vents.rs"

[[bin]]
name = "vents2"
path = "src/vents2.rs"


[[bin]]
name = "lanternfish"
path = "src/lanternfish.rs"

[[bin]]
name = "lanternfish2"
path = "src/lanternfish2.rs"

[[bin]]
name = "crabs"
path = "src/crabs.rs"

[[bin]]
name = "crabs2"
path = "src/crabs2.rs"

[[bin]]
name = "seven-segment"
path = "src/seven-segment.rs"

[[bin]]
name = "seven-segment2"
path = "src/seven-segment2.rs"

[[bin]]
name = "basin"
path = "src/basin.rs"

[[bin]]
name = "basin2"
path = "src/basin2.rs"

[[bin]]
name = "syntax"
path = "src/syntax.rs"

[[bin]]
name = "syntax2"
path = "src/syntax2.rs"

[[bin]]
name = "dumbo"
path = "src/dumbo.rs"

[[bin]]
name = "dumbo2"
path = "src/dumbo2.rs"



[dependencies]
